<resources>
    <string name="Select">Выберите предмет</string>
    <string name="Test">Тест</string>
    <string name="ThemeSelect">Выберите тему</string>
    <string name="ThemeSelect_1part">Выберите тему 1 часть</string>
    <string name="ThemeSelect_2part">Выберите тему 2 часть</string>
    <string name="Class_5">Класс 5</string>
    <string name="Class_6">Класс 6</string>
    <string name="Class_7">Класс 7</string>
    <string name="Class_8">Класс 8</string>
    <string name="Class_9">Класс 9</string>
    <string name="Class_10">Класс 10</string>
    <string name="Class_11">Класс 11</string>
    <string name="VideoOverview">Видео обзоры</string>
    <string name="see_more">Посмотреть еще</string>
    <string name="Back">Назад</string>
    <string name="Subject">Выбор предмета</string>
    <string name="Video1">Видео 1</string>
    <string name="Video2">Видео 2</string>
    <string name="Part2">Часть 2</string>
    <string name="Part1">Часть 1</string>
    <string name="Contin">Стр.129</string>
    <string name="toggle_theme">Сменить тему</string>
    <string name="Select_class">Выберите класс</string>
    <string name="comun5">Обществознание</string>
    <string name="eng5">Английский язык</string>
    <string name="mat5">Математика</string>
    <string name="infor">Информатика</string>
    <string name="alg">Алгебра</string>
    <string name="bio">Биология</string>
    <string name="hisrus">История России</string>
    <string name="Elements2">Элементы (стр 5)</string>
    <string name="SameElementsNames2">Одинаковые элементы Имена (стр 6)</string>
    <string name="PolygonsOnGrid2">Многоугольники на сетке (стр 10)</string>
    <string name="Set2">Множество (стр 14)</string>
    <string name="SameSetsSubset2">Одинаковые (равные) множества. Подмножество (стр 19)</string>
    <string name="Sequence2">Последовательность (стр 24)</string>
    <string name="SameSequences2">Одинаковые последовательности (стр 27)</string>
    <string name="TrueAndFalseStatements2">Истинные и ложные утверждения (стр 32)</string>
    <string name="SequenceMembers2">Члены последовательности (стр 37)</string>
    <string name="MeaninglessStatements2">Когда утверждения не имеют смысла (стр 38)</string>
    <string name="StatementsAboutEachElement2">Утверждения о каждом элементе (стр 44)</string>
    <string name="PolygonArea2">Площадь многоугольника (стр 49)</string>
    <string name="RightTriangleAreaOnGrid2">Площадь прямоугольного треугольника на сетке (стр 53)</string>
    <string name="SetsIntersectionAndUnion2">Пересечение и объединение множеств (стр 57)</string>
    <string name="Tree2">Дерево (стр 63)</string>
    <string name="TreeSequence2">Последовательность из дерева (стр 65)</string>
    <string name="ParentsAndChildren2">Родители и дети (стр 66)</string>
    <string name="Performer2">Исполнитель (стр 77)</string>
    <string name="DirectAndProgrammaticControl2">Прямое и программное управление (стр 94)</string>
    <string name="Algorithm2">Алгоритм (стр 99)</string>
    <string name="AlgorithmErrors2">Ошибки в алгоритмах (стр 102)</string>
    <string name="NaturalNumberNotation2">Обозначение натуральных чисел (стр 7)</string>
    <string name="SegmentTriangle2">Отрезок. Длина отрезка. Треугольник (стр 12)</string>
    <string name="PlaneLineRay2">Плоскость. Прямая. Луч (стр 20)</string>
    <string name="ScalesAndCoordinates2">Шкалы и координаты (стр 26)</string>
    <string name="LessOrMore2">Меньше или больше (стр 32)</string>
    <string name="AdditionProperties2">Сложение натуральных чисел и его свойства (стр 42)</string>
    <string name="Subtraction2">Вычитание (стр 51)</string>
    <string name="NumericAndLetterExpressions2">Числовые и буквенные выражения (стр 60)</string>
    <string name="LetterPropertiesOfAdditionAndSubtraction2">Буквенная запись свойств сложения и вычитания (стр 66)</string>
    <string name="Equation2">Уравнение (стр 71)</string>
    <string name="MultiplicationProperties2">Умножение натуральных чисел и его свойства (стр 82)</string>
    <string name="Division2">Деление (стр 90)</string>
    <string name="DivisionWithRemainder2">Деление с остатком (стр 99)</string>
    <string name="ExpressionSimplification2">Упрощение выражений (стр 103)</string>
    <string name="OrderOfOperations2">Порядок выполнения действий (стр 112)</string>
    <string name="NumberPowerSquareCube2">Степень числа. Квадрат и куб числа (стр 119)</string>
    <string name="Formulas2">Формулы (стр 126)</string>
    <string name="AreaRectangleFormula2">Площадь. Формула площади прямоугольника (стр 132)</string>
    <string name="AreaUnits2">Единицы измерения площадей (стр 138)</string>
    <string name="RectangularParallelepiped2">Прямоугольный параллелепипед (стр 146)</string>
    <string name="VolumeParallelepiped2">Объёмы. Объём прямоугольного параллелепипеда (стр 150)</string>
    <string name="CircleAndDisk2">Окружность и круг (стр 7)</string>
    <string name="FractionsAndParts2">Доли. Обыкновенные дроби (стр 13)</string>
    <string name="FractionComparison2">Сравнение дробей (стр 21)</string>
    <string name="ProperAndImproperFractions2">Правильные и неправильные дроби (стр 27)</string>
    <string name="AdditionAndSubtractionOfFractionsWithSameDenominators2">Сложение и вычитание дробей с одинаковыми знаменателями (стр 31)</string>
    <string name="DivisionAndFractions2">Деление и дроби (стр 39)</string>
    <string name="MixedNumbers2">Смешанные числа (стр 45)</string>
    <string name="AdditionAndSubtractionOfMixedNumbers2">Сложение и вычитание смешанных чисел (стр 51)</string>
    <string name="DecimalRepresentationOfFractions2">Десятичная запись дробных чисел (стр 61)</string>
    <string name="ComparisonOfDecimalFractions2">Сравнение десятичных дробей (стр 67)</string>
    <string name="AdditionAndSubtractionOfDecimalFractions2">Сложение и вычитание десятичных дробей (стр 73)</string>
    <string name="ApproximateValuesAndRoundingNumbers2">Приближённые значения чисел. Округление чисел (стр 81)</string>
    <string name="MultiplicationOfDecimalFractionsByNaturalNumbers2">Умножение десятичных дробей на натуральные числа (стр 90)</string>
    <string name="DivisionOfDecimalFractionsByNaturalNumbers2">Деление десятичных дробей на натуральные числа (стр 95)</string>
    <string name="MultiplicationOfDecimalFractions2">Умножение десятичных дробей (стр 102)</string>
    <string name="DivisionByDecimalFraction2">Деление на десятичную дробь (стр 110)</string>
    <string name="ArithmeticMean2">Среднее арифметическое (стр 117)</string>
    <string name="Calculator2">Микрокалькулятор (стр 126)</string>
    <string name="Percentages2">Проценты (стр 131)</string>
    <string name="AngleRightAndStraightAngleDrawingTriangle2">Угол. Прямой и развёрнутый угол. Чертёжный треугольник (стр 139)</string>
    <string name="MeasuringAnglesProtractor2">Измерение углов. Транспортир (стр 146)</string>
    <string name="CircleDiagrams2">Круговые диаграммы (стр 154)</string>
    <string name="SetConcept2">Понятие множества (стр 160)</string>
    <string name="IntersectionAndUnionOfSets2">Общая часть множеств. Объединение множеств (стр165)</string>
    <string name="TrueOrFalse2">Верно или неверно (стр 169)</string>
    <string name="Module1_SchoolDays2">Модуль 1: School days (стр. 43)</string>
    <string name="Module2_CoolStuff2">Модуль 2: Cool stuff! (стр. 55)</string>
    <string name="Module3_WhatCanYouDo2">Модуль 3: What can you do? (стр. 67)</string>
    <string name="Module4_MyHomeMyCastle2">Модуль 4: My home, my castle! (стр. 79)</string>
    <string name="Module5_FamilyTree2">Модуль 5: Family tree (стр. 91)</string>
    <string name="Module6_TheAnimalKingdom2">Модуль 6: The animal kingdom (стр. 103)</string>
    <string name="Module7_WeatherAndClothes2">Модуль 7: Weather and clothes (стр. 115)</string>
    <string name="Module8_Food2">Модуль 8: Food (стр. 127)</string>
    <string name="NewFriends_Module">Модуль 1: New friends (стр. 11)</string>
    <string name="AllAboutMe_Module">Модуль 2: All about me (стр. 23)</string>
    <string name="FamilyLife_Module">Модуль 3: Family life (стр. 37)</string>
    <string name="HomeNeighbourhood_Module">Модуль 4: My home and my neighbourhood (стр. 49)</string>
    <string name="HavingFun_Module">Модуль 5: Having fun (стр. 63)</string>
    <string name="FoodMatters_Module">Модуль 6: Food matters! (стр. 75)</string>
    <string name="MyCity_Module">Модуль 7: My city (стр. 89)</string>
    <string name="LifeInThePast_Module">Модуль 8: Life in the past (стр. 101)</string>
    <string name="HumanBiologicalSocial">Биологическое и социальное в человеке (стр. 6)</string>
    <string name="HumanPersonality">Человек - личность (стр. 14)</string>
    <string name="AdolescencePeriod">Отрочество - особая пора жизни (стр. 22)</string>
    <string name="HumanNeedsAbilities">Потребности и способности человека (стр. 35)</string>
    <string name="LimitedPossibilities">Если возможности ограниченны (стр. 42)</string>
    <string name="ActivityDiversity">Деятельность и многообразие её видов (стр. 51)</string>
    <string name="HumanCognition">Познание человеком мира и самого себя (стр. 58)</string>
    <string name="CommunicationSkills">Общение (стр. 69)</string>
    <string name="ConflictResolution">Конфликты: почему они возникают и как их избежать (стр. 78)</string>
    <string name="SmallGroup2">Человек в малой группе (стр. 84)</string>
    <string name="FamilyRelations2">Семья и семейные отношения (стр. 91)</string>
    <string name="SchoolEducation">Школьное образование (стр. 99)</string>
    <string name="SocietyStructure">Как устроено общество (стр. 107)</string>
    <string name="CountryXXI_2">Наша страна в XXI в. (стр. 115)</string>
    <string name="EconomyFoundation">Экономика - основа жизни общества (стр. 122)</string>
    <string name="SocialLife">Социальная сфера жизни общества (стр. 131)</string>
    <string name="PoliticalWorld">Мир политики (стр. 139)</string>
    <string name="CulturalAchievements">Культура и её достижения (стр. 147)</string>
    <string name="SocietyDevelopment2">Развитие общества (стр. 156)</string>
    <string name="Arithmetic_Average">Среднее арифметическое (стр 14)</string>
    <string name="Percentage_Calculations">Проценты (стр 19)</string>
    <string name="Circle_Diagrams">Представление числовой информации в круговых диаграммах (стр 27)</string>
    <string name="Types_of_Triangles">Виды треугольников (стр 32)</string>
    <string name="Set_Theory">Понятие множества (стр 37)</string>
    <string name="Prime_Decomposition">Разложение числа на простые множители (стр 43)</string>
    <string name="Greatest_Common_Divisor">Наибольший общий делитель. Взаимно простые числа (стр 50)</string>
    <string name="Least_Common_Multiple">Наименьшее общее кратное натуральных чисел (стр 55)</string>
    <string name="Fraction_Simplification">Приведение дробей к наименьшему общему знаменателю (стр 60)</string>
    <string name="Fraction_Operations">Сравнение, сложение и вычитание обыкновенных дробей (стр 64)</string>
    <string name="World_And_Russia_Beginning_Age_Discoveries2">Мир и Россия в начале эпохи Великих географических открытий (стр. 8)</string>
    <string name="Russia_Territory_Population_Economy_XVI_2">Территория, население и хозяйство России в начале XVI в. (стр. 14)</string>
    <string name="Formation_Of_States_In_Europe_And_Russia2">Формирование единых государств в Европе и в России (стр. 21)</string>
    <string name="Russian_State_First_Third_XVI_2">Российское государство в первой трети XVI в. (стр. 28)</string>
    <string name="Foreign_Policy_Of_Moscow_First_Third_XVI_2">Внешняя политика Московского княжества в первой трети XVI в. (стр. 35)</string>
    <string name="Ivan_IV_Reforms_Mid_XVI_2">Начало правления Ивана IV. Реформы середины XVI в. (стр. 42)</string>
    <string name="States_Volga_Siberia_Mid_XVI_2">Государства Поволжья, Северного Причерноморья, Сибири в середине XVI в. (стр. 51)</string>
</resources>