<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/select6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select"
        android:textSize="24sp"
        android:background="@drawable/border_background"
        android:layout_gravity="center"
        android:textColor="#333333"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/comun6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comun5"
        android:onClick="SubjectComun6"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="275dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/image6" />

    <Button
        android:id="@+id/rus6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eng5"
        android:onClick="SubjectEng6"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="275dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/image7" />

    <Button
        android:id="@+id/mat6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mat5"
        android:onClick="SubjectMat6"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="163dp"
        android:layout_gravity="start"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-15dp"
        android:src="@drawable/image8" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="163dp"
        android:layout_gravity="end"
        android:layout_marginTop="-163dp"
        android:layout_marginEnd="-20dp"
        android:src="@drawable/image9" />

    <Button
        android:id="@+id/SelectSubjects"
        style="@style/Base.Theme.EdoGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Back"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:onClick="Select_Subjest" />
</LinearLayout>
</ScrollView>