<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/VideoHisRus7_part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ThemeSelect_1part"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/text_world_and_russia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/World_And_Russia_Beginning_Age_Discoveries2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video1"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo1" />

        <Button
            android:id="@+id/button_video2"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo2" />

        <TextView
            android:id="@+id/text_russia_territory_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Russia_Territory_Population_Economy_XVI_2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video3"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo3" />

        <Button
            android:id="@+id/button_video4"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo4" />

        <TextView
            android:id="@+id/text_formation_states_europe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Formation_Of_States_In_Europe_And_Russia2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video5"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo5" />

        <Button
            android:id="@+id/button_video6"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo6" />

        <TextView
            android:id="@+id/text_russian_state_xvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Russian_State_First_Third_XVI_2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video7"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo7" />

        <Button
            android:id="@+id/button_video8"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo8" />

        <TextView
            android:id="@+id/text_foreign_policy_moscow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Foreign_Policy_Of_Moscow_First_Third_XVI_2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video9"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo9" />

        <Button
            android:id="@+id/button_video10"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo10" />

        <TextView
            android:id="@+id/text_ivan_iv_reforms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ivan_IV_Reforms_Mid_XVI_2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video11"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo11" />

        <Button
            android:id="@+id/button_video12"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo12" />

        <TextView
            android:id="@+id/text_states_volga_siberia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/States_Volga_Siberia_Mid_XVI_2"
            android:textSize="17sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button_video13"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:onClick="playVideo13" />

        <Button
            android:id="@+id/button_video14"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/Video2"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-48dp"
            android:onClick="playVideo14" />

        <Button
            android:id="@+id/button_example"
            style="@style/Base.Theme.EdoGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/see_more"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:onClick="See_more5_part3"
            />

        <Button
            android:id="@+id/Select_part2"
            style="@style/Base.Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="-48dp"
            android:layout_marginEnd="4dp"
            android:onClick="part2"
            android:text="@string/Part2"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/SelectSubjects"
            style="@style/Base.Theme.EdoGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="-48dp"
            android:text="@string/Back"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:onClick="Select_Subjest"/>


    </LinearLayout>

</ScrollView>
